<resources>
    <string name="app_name">LearningUserInputEvents</string>

    <string name="intro">Place these foods in your order of preference.</string>
    <string name="option_1">Apple</string>
    <string name="option_2">Cake</string>
    <string name="option_3">Cheese</string>

    <string name="choice_1">Most favorite</string>
    <string name="choice_2">-</string>
    <string name="choice_3">Least favorite</string>

</resources>
